[ADD]
add get offer logic

add make order, checkout endpoint
