# cmd/controllers/auth_controller.go
@@ -21,6 +21,18 @@ func NewAuthController(authService services.AuthService) *AuthController {
 	}
 }
 
+// GetOffers retrieves a list of available offers.
+//
+//	@Summary		Retrieve a list of available offers
+//	@Description	Retrieve a list of available offers.
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	[]models.Item	"List of available offers"
+//	@Failure		500	{object}	fiber.Map		"Failed to retrieve offers"
+//	@Failure		401	{object}	fiber.Map		"Unauthorized"
+//	@Router			/auth/offers [get]
+//	@Security		ApiKeyAuth
 func (c *AuthController) GetOffers(ctx *fiber.Ctx) error {
 	items, err := c.AuthService.GetOffers()
 	if err != nil {
@@ -31,9 +43,41 @@ func (c *AuthController) GetOffers(ctx *fiber.Ctx) error {
 	return ctx.JSON(items)
 }
 
+// CheckoutOrders Buy a list of orders.
 func (c *AuthController) CheckoutOrders(ctx *fiber.Ctx) error {
-	// Implementar lógica para comprar una lista de órdenes
-	return ctx.SendStatus(fiber.StatusNotImplemented)
+	var items []models.OrderItem
+	// Check and parse input data
+	if err := ctx.BodyParser(&items); err != nil {
+		// error 400 Bad Request
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Cannot parse input data",
+			"error":   err.Error(),
+		})
+	}
+	// Get userID from giber scope
+	user := ctx.Locals("user")
+	details, ok := user.(*models.User)
+	if !ok {
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Cannot parse input data",
+			"error":   "user not found",
+		})
+	}
+	// Call service
+	order, err := c.AuthService.CheckoutOrders(details.ID, items)
+	if err != nil {
+		// error 400 Bad Request
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error checking out orders",
+			"error":   err.Error(),
+		})
+	}
+
+	// success 201 Created
+	return ctx.Status(fiber.StatusCreated).JSON(fiber.Map{
+		"message": "Orders checked out successfully.",
+		"order":   order,
+	})
 }
 
 func (c *AuthController) GetOrderStatus(ctx *fiber.Ctx) error {
@@ -43,15 +87,15 @@ func (c *AuthController) GetOrderStatus(ctx *fiber.Ctx) error {
 
 // RegisterUser Register a new user with the data provided in the request body.
 //
-// @Summary		Register user
-// @Description	Register a new user with the data provided in the request body.
-// @Tags			Auth
-// @Accept			json
-// @Produce		json
-// @Param			request	body		models.User	true	"Data of the user to register"
-// @Success		201		{object}	models.User	"User registered successfully"
-// @Failure		400		{object}	string		"Cannot parse input data or registering user"
-// @Router			/auth/register [post]
+//	@Summary		Register user
+//	@Description	Register a new user with the data provided in the request body.
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		models.User	true	"Data of the user to register"
+//	@Success		201		{object}	models.User	"User registered successfully"
+//	@Failure		400		{object}	string		"Cannot parse input data or registering user"
+//	@Router			/auth/register [post]
 func (c *AuthController) RegisterUser(ctx *fiber.Ctx) error {
 	var newUser models.User
 
@@ -76,9 +120,9 @@ func (c *AuthController) RegisterUser(ctx *fiber.Ctx) error {
 	// Create and sign token
 	var secret string
 	if newUser.IsAdmin {
-		secret = tools.GetEnvValue("ADMIN_SECRET_KEY","asecret_key")
+		secret = tools.GetEnvValue("ADMIN_SECRET_KEY", "asecret_key")
 	} else {
-		secret = tools.GetEnvValue("USER_SECRET","usecret_key")
+		secret = tools.GetEnvValue("USER_SECRET", "usecret_key")
 	}
 	tokenString, err := createAndSignToken(newUser.ID, secret)
 	if err != nil {
@@ -100,6 +144,18 @@ func (c *AuthController) RegisterUser(ctx *fiber.Ctx) error {
 	})
 }
 
+// LoginUser Authenticate a user with the data provided in the request body.
+//
+//	@Summary		Authenticate user
+//	@Description	Authenticate a user with the data provided in the request body.
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		models.User	true	"Data of the user to authenticate"
+//	@Success		201		{object}	models.User	"User logged successfully"
+//	@Failure		400		{object}	string		"Cannot parse input data or login user"
+//	@Failure		500		{object}	string		"Error creating token"
+//	@Router			/auth/login [post]
 func (c *AuthController) LoginUser(ctx *fiber.Ctx) error {
 	var loggedUser models.User
 
@@ -124,9 +180,9 @@ func (c *AuthController) LoginUser(ctx *fiber.Ctx) error {
 	// Create and sign token
 	var secret string
 	if loggedUser.IsAdmin {
-		secret = tools.GetEnvValue("ADMIN_SECRET_KEY","asecret_key")
+		secret = tools.GetEnvValue("ADMIN_SECRET_KEY", "asecret_key")
 	} else {
-		secret = tools.GetEnvValue("USER_SECRET","usecret_key")
+		secret = tools.GetEnvValue("USER_SECRET_KEY", "usecret_key")
 	}
 
 	tokenString, err := createAndSignToken(loggedUser.ID, secret)
@@ -149,6 +205,7 @@ func (c *AuthController) LoginUser(ctx *fiber.Ctx) error {
 }
 
 func createAndSignToken(id uint, secret string) (string, error) {
+	// secret = "xIvBy5CyQ0HDeelAlHmNhAMGBlvuHfITXOdOftjaiEg="
 	// Create a new token object
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
 		"userID": id,
@@ -162,6 +219,7 @@ func createAndSignToken(id uint, secret string) (string, error) {
 	if err != nil {
 		return "", fmt.Errorf("error signing token: %w", err)
 	}
+
 	return tokenString, nil
 }
 
@@ -174,10 +232,28 @@ func setCookie(ctx *fiber.Ctx, tokenString string) {
 	})
 }
 
+// GetSignupPage retrieves the signup page.
+//
+//	@Summary		Retrieve the signup page
+//	@Description	Retrieve the signup page using HTML template.
+//	@Tags			Auth
+//	@Accept			html
+//	@Produce		html
+//	@Success		200	{object}	string	"Signup page"
+//	@Router			/signup [get]
 func (c *AuthController) GetSignupPage(ctx *fiber.Ctx) error {
 	return ctx.Render("sessions/signup", fiber.Map{})
 }
 
+// GetLoginPage retrieves the login page.
+//
+//	@Summary		Retrieve the login page
+//	@Description	Retrieve the login page using HTML template.
+//	@Tags			Auth
+//	@Accept			html
+//	@Produce		html
+//	@Success		200	{object}	string	"Login page"
+//	@Router			/login [get]
 func (c *AuthController) GetLoginPage(ctx *fiber.Ctx) error {
 	// Render index
 	return ctx.Render("sessions/login", fiber.Map{
