# docs/swagger.yaml
@@ -1,4 +1,60 @@
 definitions:
+  fiber.Map:
+    additionalProperties: true
+    type: object
+  github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Item:
+    properties:
+      category:
+        description: '@Description Item Category'
+        type: string
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      name:
+        description: '@Description Item Name'
+        type: string
+      orders:
+        description: '@Description Orders associated with this item'
+        items:
+          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Order'
+        type: array
+      price:
+        description: '@Description Item Price'
+        type: number
+      quantity:
+        description: '@Description Item Quantity'
+        type: integer
+      status:
+        description: '@Description Order Status'
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Order:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      items:
+        description: '@Description Items associated with this order'
+        items:
+          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Item'
+        type: array
+      status:
+        description: '@Description Order Status'
+        type: string
+      updatedAt:
+        type: string
+      userId:
+        description: '@Description User ID'
+        type: integer
+    type: object
   github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.User:
     description: User
     properties:
@@ -11,7 +67,7 @@ definitions:
         type: string
       id:
         type: integer
-      is_admin:
+      isAdmin:
         description: '@Description Is Admin, default false'
         type: boolean
       password:
@@ -38,6 +94,63 @@ info:
   title: Order Api
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate a user with the data provided in the request body.
+      parameters:
+      - description: Data of the user to authenticate
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User logged successfully
+          schema:
+            $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.User'
+        "400":
+          description: Cannot parse input data or login user
+          schema:
+            type: string
+        "500":
+          description: Error creating token
+          schema:
+            type: string
+      summary: Authenticate user
+      tags:
+      - Auth
+  /auth/offers:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of available offers.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of available offers
+          schema:
+            items:
+              $ref: '#/definitions/github_com_ICOMP-UNC_newworld-agustinhernando2_internal_models.Item'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/fiber.Map'
+        "500":
+          description: Failed to retrieve offers
+          schema:
+            $ref: '#/definitions/fiber.Map'
+      security:
+      - ApiKeyAuth: []
+      summary: Retrieve a list of available offers
+      tags:
+      - Auth
   /auth/register:
     post:
       consumes:
@@ -62,6 +175,36 @@ paths:
           schema:
             type: string
       summary: Register user
+      tags:
+      - Auth
+  /login:
+    get:
+      consumes:
+      - text/html
+      description: Retrieve the login page using HTML template.
+      produces:
+      - text/html
+      responses:
+        "200":
+          description: Login page
+          schema:
+            type: string
+      summary: Retrieve the login page
+      tags:
+      - Auth
+  /signup:
+    get:
+      consumes:
+      - text/html
+      description: Retrieve the signup page using HTML template.
+      produces:
+      - text/html
+      responses:
+        "200":
+          description: Signup page
+          schema:
+            type: string
+      summary: Retrieve the signup page
       tags:
       - Auth
 swagger: "2.0"
